fixed admin, and semesterId associations
