# odb_api/papahana/models/status_subset.py
@@ -9,13 +9,13 @@ from papahana.models.base_model_ import Model
 from papahana import util
 
 
-class ObservationTemplate(Model):
+class StatusSubset(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self):  # noqa: E501
-        """ObservationTemplate - a model defined in Swagger
+        """StatusSubset - a model defined in Swagger
 
         """
         self.swagger_types = {
@@ -25,12 +25,12 @@ class ObservationTemplate(Model):
         }
 
     @classmethod
-    def from_dict(cls, dikt) -> 'ObservationTemplate':
+    def from_dict(cls, dikt) -> 'StatusSubset':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The ObservationTemplate of this ObservationTemplate.  # noqa: E501
-        :rtype: ObservationTemplate
+        :return: The StatusSubset of this StatusSubset.  # noqa: E501
+        :rtype: StatusSubset
         """
         return util.deserialize_model(dikt, cls)
